# SwitchyOmega-Whitelist

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  update.py  white-list.sorl  white-mini.sorl
.github/workflows/: update.yml
tests/: conftest.py  test_infrastructure_validation.py
workflows/: update.yml
